--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ authors = [
 requires-python = ">=3.10"
 dependencies = [
     "numpy",
+	"shapely",
     "pandas",
     "pyproj",
     "rasterio",
@@ -19,5 +20,6 @@ dependencies = [
     "netCDF4",
     "pyyaml",
     "toml",
+    "boto3"
     "cht-utils",
 ]
